# hush-backend

./: .env  docker-compose.yml  pyproject.toml
backend/: __main__.py
backend/config/: weaviate_config.py
backend/postgresql/: postgre_config.py
backend/routes/: gallery.py
backend/routes/gallery_route/: get.py  post.py
